fix(huds-buscador): se quita z-index en contador de resultados

--- a/src/app/modules/rup/components/ejecucion/buscador.scss
+++ b/src/app/modules/rup/components/ejecucion/buscador.scss
@@ -89,7 +89,6 @@
                 text-align: left;
                 padding: 3px;
                 font-size: 0.7rem;
-                z-index: 1000;
             }
         }
     }
